package zhw.designpattern.strategy.origin;

/***
 * 抽象策略类
 */
public interface Strategy {
    void strategyMethod();//策略方法
}
